--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-genre
-genre_artist
-artist
+
 
 # C extensions
 *.so
@@ -130,3 +128,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#Other files
+genre
+genre_artist
+artist
